fixed horizontal scrolling responsiveness

--- a/index.css
+++ b/index.css
@@ -1,13 +1,16 @@
 :root {
-  font-size: 16px; }
+  font-size: 16px;
+}
 
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 .container {
-  display: block;  
-  margin: 50px; }
+  display: block;
+  margin: 5vw;
+}
 
 .banner .card {
   background: #2c2c2c;
@@ -15,60 +18,65 @@ body {
   border-radius: 10px;
   box-shadow: 0px 3px 20px 2px #35eea4;
   display: block;
-  }
-  .banner .card .heading {
-    color: #35eea4;
-    font-family: "Playfair Display", serif;
-    font-size: 64px;
-    font-weight: 700;
-    margin-bottom: 5px;
-    padding: 40px; }
-  .banner .card .sub-heading {
-    color: #35eea4;
-    font-family: "Playfair Display", serif;
-    font-size: 21px;
-    margin: 0;
-    padding: 0 30px 30px; }
-    .banner .card .sub-heading button {
-      background: none;
-      border: none;
-      border-radius: 5px;
-      color: #35eea4;
-      font-family: "Istok Web", sans-serif;
-      font-size: 16px;
-      letter-spacing: 8px;
-      margin-top: 20px;
-      padding: 10px;
-      text-transform: uppercase;
-      transition: box-shadow 0.3s linear 0.1s; }
-    .banner .card .sub-heading button:hover {
-      cursor: pointer;
-      box-shadow: 0 3px 20px 0 #35eea4; }
+}
+.banner .card .heading {
+  color: #35eea4;
+  font-family: "Playfair Display", serif;
+  font-size: 4rem;
+  font-weight: 700;
+  margin-bottom: 1vh;
+  padding: 5vw;
+}
+.banner .card .sub-heading {
+  color: #35eea4;
+  font-family: "Playfair Display", serif;
+  font-size: 1.3rem;
+  margin: 0;
+  padding: 0 5vw 2vw;
+}
+.banner .card .sub-heading button {
+  background: none;
+  border: none;
+  border-radius: 5px;
+  color: #35eea4;
+  font-family: "Istok Web", sans-serif;
+  font-size: 1rem;
+  letter-spacing: 8px;
+  margin-top: 2vh;
+  padding: 10px;
+  text-transform: uppercase;
+  transition: box-shadow 0.3s linear 0.1s;
+}
+.banner .card .sub-heading button:hover {
+  cursor: pointer;
+  box-shadow: 0 3px 20px 0 #35eea4;
+}
 
 .row {
   display: block;
 
-  margin-top: 30px; }
+  margin-top: 5vh;
+}
 
-  .row .my-image {
-    border: 1px solid #35eea4;
-    border-radius: 5px;
-    box-shadow: 0px 3px 20px 2px #2c2c2c;
-    width: 250px;
-    float: right;
-  }
+.row .my-image {
+  border: 1px solid #35eea4;
+  border-radius: 5px;
+  box-shadow: 0px 3px 20px 2px #2c2c2c;
+  width: 25vw;
+  float: right;
+}
 
 .paragraph {
   float: left;
   color: #2c2c2c;
   font-family: "Istok Web", sans-serif;
-  width: 600px;
+  width: 60%;
 }
 
 .icon-group {
-  margin-top: 20px; }
-  .icon-group .icon {
-    margin-right: 10px;
-    width: 25px; }
-
-
+  margin-top: 20px;
+}
+.icon-group .icon {
+  margin-right: 10px;
+  width: 25px;
+}
